Fixes #1482: extraneous white space in item header

--- a/css/liferea.css
+++ b/css/liferea.css
@@ -143,7 +143,8 @@ div.item header {
 }
 
 div.item header > h1 {
-  margin-top: 12px;
+  margin-top: 0.4rem;
+  margin-bottom: 0.4rem;
 }
 
 h1 {
